--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,45 @@
-.App {
-  text-align: center;
+body {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+/* stories */
+.stories,
+.centerItems {
   display: flex;
+  justify-content: center;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin-bottom: 30px;
 }
 
-.App-link {
-  color: #61dafb;
+.stories .news {
+  width: 50vw;
+  margin-top: 15px;
+}
+form {
+  width: 50vw;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+/* page */
+.page {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 52vw;
+}
+
+@media screen and (max-width: 768px) {
+  .stories .news {
+    width: 80vw;
   }
-  to {
-    transform: rotate(360deg);
+
+  form {
+    width: 80vw;
+  }
+
+  .page {
+    width: 87vw;
   }
 }
